# filesystem

./: Makefile  README.md  pyproject.toml
filesystem/: __init__.py  core.py
tests/: test_core.py
